--- a/app/views/champions/edit.html.haml
+++ b/app/views/champions/edit.html.haml
@@ -1,4 +1,10 @@
 %h2
   Edit Champion
 
-= render 'form'
+= simple_form_for @champion do |f|
+  = f.select :category_id, @categories
+  = f.input :role, label: 'Role'
+  = f.input :health ,as: :integer
+  = f.input :armor ,as: :integer
+  = f.input :attack ,as: :integer
+  = f.button :submit , class: "btn btn-primary btn-md"
