--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -48,7 +48,8 @@
       .row
         .col-lg-9
           = bootstrap_flash
-          = yield
+          .container
+            = yield
 
         -# .col-lg-3
         -#   .well.sidebar-nav
