--- a/app/views/champions/index.html.haml
+++ b/app/views/champions/index.html.haml
@@ -1,5 +1,5 @@
 %h1.current-category{style: "text-align: center;"}
-  =params[:category]
+  =params[:lane]
 - if @champions.count <= 0
   %h1
     There are no champions added yet
