Little changes to test

--- a/app/views/champions/show.html.haml
+++ b/app/views/champions/show.html.haml
@@ -28,7 +28,7 @@
 .row
   .col-md-4
     .reviews
-      %h1
+      %h1.rev
         Reviews:
       = render @champion.reviews #wynika to z konwencji do kazdego championa który posiada receznzje szuka w widokach recenzji pojedynczej a jezeli jest ich wiecej wypisuje dowolna ilosc
       %br
